assets/css/main.css
/* ... */
/* Basic */

	html {
		background-color: #313a3d;
		background-attachment: fixed,						fixed;
		background-image: url("/assets/img/overlay.png"), url("/assets/img/home_abstract.png");
		background-position: top left,					center center;
		background-repeat: repeat,						none;
		background-size: auto,						cover;
		-webkit-backface-visibility: hidden;
	}

	html.is-loading body *, html.is-loading body *:before, html.is-loading body *:after {
		-moz-animation: none !important;
		-webkit-animation: none !important;
		-ms-animation: none !important;
		animation: none !important;
		-moz-transition: none !important;
		-webkit-transition: none !important;
		-ms-transition: none !important;
		transition: none !important;
	}

	html.is-touch {
		height: 100vh;
		overflow-x: hidden;
        overflow-y: auto;
	}

		html.is-touch #wrapper {
			-webkit-backface-visibility: hidden;
			-webkit-overflow-scrolling: touch;
			-webkit-transform: translate3d(0, 0, 0);
			height: 100vh;
			overflow-x: hidden;
            overflow-y: auto;
		}

	body, input, select, textarea {
		color: #6f7577;
		font-family: "Raleway", "Helvetica", sans-serif;
		font-size: 15pt;
		font-weight: 400;
		line-height: 1.75em;
	}

	a {
		-moz-transition: color 0.2s ease-in-out, border-bottom-color 0.2s ease-in-out;
		-webkit-transition: color 0.2s ease-in-out, border-bottom-color 0.2s ease-in-out;
		-ms-transition: color 0.2s ease-in-out, border-bottom-color 0.2s ease-in-out;
		transition: color 0.2s ease-in-out, border-bottom-color 0.2s ease-in-out;
		color: #8cd1a8;
		text-decoration: none;
	}

		a:hover {
			border-bottom-color: transparent !important;
			color: #8cd1a8 !important;
			text-decoration: none;
		}

	strong, b {
		color: #61686b;
		font-weight: 700;
	}

	em, i {
		font-style: italic;
	}

	p {
		margin: 0 0 2em 0;
	}

	h1, h2, h3, h4, h5, h6, a {
		color: #61686b !important;
		font-weight: 800;
		letter-spacing: 0.075em;
		line-height: 1em;
		margin: 0 0 1em 0;
		text-transform: uppercase;
	}

		h1 a, h2 a, h3 a, h4 a, h5 a, h6 a {
			color: inherit;
			text-decoration: none;
		}

	sub {
		font-size: 0.8em;
		position: relative;
		top: 0.5em;
	}

	sup {
		font-size: 0.8em;
		position: relative;
		top: -0.5em;
	}

	hr {
		border: 0;
		border-bottom: solid 1px #dddddd;
		margin: 2em 0;
	}

		hr.major {
			margin: 3em 0;
		}

	blockquote {
		border-left: solid 6px #dddddd;
		font-style: italic;
		margin: 0 0 2em 0;
		padding: 0.5em 0 0.5em 1.5em;
	}

	code {
		background: rgba(144, 144, 144, 0.075);
		font-family: "Courier New", monospace;
		font-size: 0.9em;
		margin: 0 0.25em;
		padding: 0.25em 0.65em;
	}

	pre {
		-webkit-overflow-scrolling: touch;
		font-family: "Courier New", monospace;
		font-size: 0.9em;
		margin: 0 0 2em 0;
	}

		pre code {
			display: block;
			line-height: 1.75em;
			padding: 1em 1.5em;
			overflow-x: auto;
		}

	.align-left {
		text-align: left;
	}

	.align-center {
		text-align: center;
	}

	.align-right {
		text-align: right;
	}

/* Loader */

	@-moz-keyframes spinner-show {
		0% {
			opacity: 0;
		}

		100% {
			opacity: 1;
		}
	}

	@-webkit-keyframes spinner-show {
		0% {
			opacity: 0;
		}

		100% {
			opacity: 1;
		}
	}

	@-ms-keyframes spinner-show {
		0% {
			opacity: 0;
		}

		100% {
			opacity: 1;
		}
	}

	@keyframes spinner-show {
		0% {
			opacity: 0;
		}

		100% {
			opacity: 1;
		}
	}

	@-moz-keyframes spinner-hide {
		0% {
			color: #454d50;
			z-index: 10001;
			-moz-transform: scale(1) rotate(0deg);
			-webkit-transform: scale(1) rotate(0deg);
			-ms-transform: scale(1) rotate(0deg);
			transform: scale(1) rotate(0deg);
		}

		99% {
			color: #313a3d;
			z-index: 10001;
			-moz-transform: scale(0.5) rotate(360deg);
			-webkit-transform: scale(0.5) rotate(360deg);
			-ms-transform: scale(0.5) rotate(360deg);
			transform: scale(0.5) rotate(360deg);
		}

		100% {
			color: #313a3d;
			z-index: -1;
			-moz-transform: scale(0) rotate(360deg);
			-webkit-transform: scale(0) rotate(360deg);
			-ms-transform: scale(0) rotate(360deg);
			transform: scale(0) rotate(360deg);
		}
	}

	@-webkit-keyframes spinner-hide {
		0% {
			color: #454d50;
			z-index: 10001;
			-moz-transform: scale(1) rotate(0deg);
			-webkit-transform: scale(1) rotate(0deg);
			-ms-transform: scale(1) rotate(0deg);
			transform: scale(1) rotate(0deg);
		}

		99% {
			color: #313a3d;
			z-index: 10001;
			-moz-transform: scale(0.5) rotate(360deg);
			-webkit-transform: scale(0.5) rotate(360deg);
			-ms-transform: scale(0.5) rotate(360deg);
			transform: scale(0.5) rotate(360deg);
		}

		100% {
			color: #313a3d;
			z-index: -1;
			-moz-transform: scale(0) rotate(360deg);
			-webkit-transform: scale(0) rotate(360deg);
			-ms-transform: scale(0) rotate(360deg);
			transform: scale(0) rotate(360deg);
		}
	}

	@-ms-keyframes spinner-hide {
		0% {
			color: #454d50;
			z-index: 10001;
			-moz-transform: scale(1) rotate(0deg);
			-webkit-transform: scale(1) rotate(0deg);
			-ms-transform: scale(1) rotate(0deg);
			transform: scale(1) rotate(0deg);
		}

		99% {
			color: #313a3d;
			z-index: 10001;
			-moz-transform: scale(0.5) rotate(360deg);
			-webkit-transform: scale(0.5) rotate(360deg);
			-ms-transform: scale(0.5) rotate(360deg);
			transform: scale(0.5) rotate(360deg);
		}

		100% {
			color: #313a3d;
			z-index: -1;
			-moz-transform: scale(0) rotate(360deg);
			-webkit-transform: scale(0) rotate(360deg);
			-ms-transform: scale(0) rotate(360deg);
			transform: scale(0) rotate(360deg);
		}
	}
/* ... */

